kubernetes/userService-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
        version: v1
    spec:
      containers:
        - name: user-service
          image: crservicemeshpoc.azurecr.io/user-service:v4
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
