kubernetes/votingService-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-service
spec:
  selector:
    app: voting-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
