kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/health-probe-path: "/health"
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/user/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service
                port:
                  number: 8082
          - path: /api/v1/voting/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: voting-service
                port:
                  number: 8081
